CXXFLAGS=-g -I ../Utils -I ../BeOS_UI -I ../Network -I. -I..

SOURCES = DocElem.cc DocElemStack.cc DocWalker.cc Event.cc FormsDocElem.cc Frame.cc History.cc Html.cc MetaDocElem.cc Pref.cc Resource.cc ResourceGetter.cc StrDocElem.cc Style.cc Table.cc Tag.cc TagAttr.cc TagDocElem.cc TagDocElemFactory.cc TextDocElem.cc UrlQuery.cc User.cc VariousDocElem.cc fwt.cc
